--- a/貓卯/index.html
+++ b/貓卯/index.html
@@ -87,7 +87,7 @@
       <div class="introduction-imgp">
         <img class="gif-4" src="./img/S__5087301.gif" />
         <div class="introduct">
-          <img src="./img/簡介-1.png" />
+          <img src="./img/LINE_ALBUM_貓卯的天下_240606_1.jpg" />
           <h3>斜眼看人熊</h3>
           <p>
             嗨大家好，我是貓卯。 我好像沒有好好自我介紹過自己。
@@ -96,7 +96,7 @@
           </p>
         </div>
         <div class="introduct">
-          <img src="./img/簡介-2.png" />
+          <img src="./img/LINE_ALBUM_貓卯的天下.jpg" />
           <h3>奇怪蓁</h3>
           <p>
             我主人很奇怪，明明是隻熊，硬要叫我貓貓，然後就延伸一大堆綽號… 貓卯
